[gd_scene format=3 uid="uid://cg2pqkfi4uprm"]

[ext_resource type="Script" uid="uid://bkwyrb6io5ssg" path="res://Scenes/journal_ui.gd" id="1_e5wfp"]
[ext_resource type="Texture2D" uid="uid://c51l2emrpd0ke" path="res://Assets/NPCs/NPC1.png" id="1_j134b"]
[ext_resource type="Texture2D" uid="uid://chw7rti2yllbc" path="res://Assets/UI/libreta.png" id="2_qrgs8"]
[ext_resource type="FontFile" uid="uid://cgnf6vdcil3b2" path="res://Assets/UI/DK Crayon Crumble.ttf" id="3_1qdbr"]
[ext_resource type="Texture2D" uid="uid://cgi4pcwcvn3ih" path="res://Assets/UI/boton-1.png" id="4_cgkyd"]
[ext_resource type="Texture2D" uid="uid://cnq0yy8yk5dpj" path="res://Assets/NPCs/chef.png" id="4_e5wfp"]
[ext_resource type="Texture2D" uid="uid://cl0tal74uqche" path="res://Assets/NPCs/NPC4.png" id="4_fcyhq"]
[ext_resource type="Texture2D" uid="uid://b12t75oflarmo" path="res://Assets/NPCs/Guard.png" id="6_qrgs8"]

[sub_resource type="Theme" id="Theme_qrgs8"]
default_font = ExtResource("3_1qdbr")
Label/colors/font_color = Color(0, 0, 0, 1)
Label/font_sizes/font_size = 16
Label/fonts/font = ExtResource("3_1qdbr")

[sub_resource type="ButtonGroup" id="ButtonGroup_j134b"]

[node name="JournalUI" type="CanvasLayer" unique_id=234007581]
script = ExtResource("1_e5wfp")

[node name="BackgroundDim" type="ColorRect" parent="." unique_id=1453452491]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.44313726)

[node name="CenteringPont" type="CenterContainer" parent="." unique_id=1007883247]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="JournalBackground" type="TextureRect" parent="CenteringPont" unique_id=1768396742]
custom_minimum_size = Vector2(800, 600)
layout_mode = 2
texture = ExtResource("2_qrgs8")
expand_mode = 1

[node name="Label" type="Label" parent="CenteringPont/JournalBackground" unique_id=48047744]
layout_mode = 0
offset_left = 142.0
offset_top = 70.0
offset_right = 364.0
offset_bottom = 102.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_1qdbr")
theme_override_font_sizes/font_size = 29
text = "Notas del Caso"
horizontal_alignment = 1

[node name="LeftPageArea" type="MarginContainer" parent="CenteringPont/JournalBackground" unique_id=2025718653]
layout_mode = 0
offset_right = 806.0
offset_bottom = 557.0
theme_override_constants/margin_left = 107
theme_override_constants/margin_top = 94
theme_override_constants/margin_right = 417
theme_override_constants/margin_bottom = 29

[node name="LeftNotes" type="VBoxContainer" parent="CenteringPont/JournalBackground/LeftPageArea" unique_id=1760445578]
layout_mode = 2
alignment = 1

[node name="HSeparator" type="HSeparator" parent="CenteringPont/JournalBackground/LeftPageArea/LeftNotes" unique_id=868613393]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="CenteringPont/JournalBackground/LeftPageArea/LeftNotes" unique_id=944400973]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="NotesList" type="VBoxContainer" parent="CenteringPont/JournalBackground/LeftPageArea/LeftNotes/ScrollContainer" unique_id=1529655245]
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_qrgs8")

[node name="HSeparator2" type="HSeparator" parent="CenteringPont/JournalBackground/LeftPageArea/LeftNotes" unique_id=663325447]
layout_mode = 2

[node name="QuitButton" type="TextureButton" parent="CenteringPont/JournalBackground/LeftPageArea/LeftNotes" unique_id=387120114]
custom_minimum_size = Vector2(300, 150)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("4_cgkyd")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="CenteringPont/JournalBackground/LeftPageArea/LeftNotes/QuitButton" unique_id=1838137679]
layout_mode = 0
offset_left = 91.0
offset_top = 60.0
offset_right = 205.0
offset_bottom = 83.0
theme_override_fonts/font = ExtResource("3_1qdbr")
theme_override_font_sizes/font_size = 22
text = "Volver al juego"

[node name="RightPageArea" type="MarginContainer" parent="CenteringPont/JournalBackground" unique_id=1758748555]
layout_mode = 0
offset_right = 945.0
offset_bottom = 751.0
mouse_filter = 2
theme_override_constants/margin_left = 440
theme_override_constants/margin_top = 66
theme_override_constants/margin_right = 280
theme_override_constants/margin_bottom = 144

[node name="Culprit_Panel" type="VBoxContainer" parent="CenteringPont/JournalBackground/RightPageArea" unique_id=1509313121]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CenteringPont/JournalBackground/RightPageArea/Culprit_Panel" unique_id=34104500]
layout_mode = 2

[node name="Label" type="Label" parent="CenteringPont/JournalBackground/RightPageArea/Culprit_Panel/VBoxContainer" unique_id=388131338]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 0.92156863)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_1qdbr")
theme_override_font_sizes/font_size = 24
text = "1. ¿Cómo luce el culpable?"

[node name="SuspectsGrid" type="GridContainer" parent="CenteringPont/JournalBackground/RightPageArea/Culprit_Panel/VBoxContainer" unique_id=1230852677]
custom_minimum_size = Vector2(100, 200)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
columns = 2

[node name="ButtonPlague" type="Button" parent="CenteringPont/JournalBackground/RightPageArea/Culprit_Panel/VBoxContainer/SuspectsGrid" unique_id=1120854505]
layout_mode = 2
theme_override_constants/icon_max_width = 96
toggle_mode = true
button_group = SubResource("ButtonGroup_j134b")
icon = ExtResource("1_j134b")
autowrap_mode = 2
autowrap_trim_flags = 0

[node name="ButtonWolf" type="Button" parent="CenteringPont/JournalBackground/RightPageArea/Culprit_Panel/VBoxContainer/SuspectsGrid" unique_id=94939503]
layout_mode = 2
theme_override_constants/icon_max_width = 96
toggle_mode = true
button_group = SubResource("ButtonGroup_j134b")
icon = ExtResource("6_qrgs8")

[node name="ButtonFox" type="Button" parent="CenteringPont/JournalBackground/RightPageArea/Culprit_Panel/VBoxContainer/SuspectsGrid" unique_id=1059956179]
layout_mode = 2
theme_override_constants/icon_max_width = 96
toggle_mode = true
button_group = SubResource("ButtonGroup_j134b")
icon = ExtResource("4_e5wfp")

[node name="ButtonCat" type="Button" parent="CenteringPont/JournalBackground/RightPageArea/Culprit_Panel/VBoxContainer/SuspectsGrid" unique_id=1306264185]
layout_mode = 2
theme_override_constants/icon_max_width = 96
toggle_mode = true
button_group = SubResource("ButtonGroup_j134b")
icon = ExtResource("4_fcyhq")

[node name="VBoxContainer2" type="VBoxContainer" parent="CenteringPont/JournalBackground/RightPageArea/Culprit_Panel" unique_id=261975252]
custom_minimum_size = Vector2(212, 0)
layout_mode = 2

[node name="Label2" type="Label" parent="CenteringPont/JournalBackground/RightPageArea/Culprit_Panel/VBoxContainer2" unique_id=1996460462]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_1qdbr")
theme_override_font_sizes/font_size = 22
text = "2. ¿Quién es el culpable?"

[node name="OptionButton" type="OptionButton" parent="CenteringPont/JournalBackground/RightPageArea/Culprit_Panel/VBoxContainer2" unique_id=591282736]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
item_count = 5
popup/item_0/text = "El Dueño"
popup/item_0/id = 0
popup/item_1/text = "La Chef"
popup/item_1/id = 1
popup/item_2/text = "El Guardia"
popup/item_2/id = 2
popup/item_3/text = "La Hija"
popup/item_3/id = 3
popup/item_4/text = "La Pianista"
popup/item_4/id = 4

[node name="SubmitButton" type="Button" parent="CenteringPont/JournalBackground/RightPageArea/Culprit_Panel" unique_id=428159949]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
disabled = true
text = "Confirmar"
icon_alignment = 1

[node name="Label2" type="Label" parent="CenteringPont/JournalBackground/RightPageArea/Culprit_Panel" unique_id=349762229]
custom_minimum_size = Vector2(150, 200)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_1qdbr")
theme_override_font_sizes/font_size = 24
text = "Importante! 
Una vez elegida tu respuesta no hay vuelta atras"
horizontal_alignment = 1
autowrap_mode = 2

[connection signal="pressed" from="CenteringPont/JournalBackground/LeftPageArea/LeftNotes/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="item_selected" from="CenteringPont/JournalBackground/RightPageArea/Culprit_Panel/VBoxContainer2/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="CenteringPont/JournalBackground/RightPageArea/Culprit_Panel/SubmitButton" to="." method="_on_submit_button_pressed"]
